--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApiContext": "Server=(localdb)\\mssqllocaldb;Database=ApiContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
